--- a/site/info/style.css
+++ b/site/info/style.css
@@ -1,7 +1,15 @@
 #welcome{
     position: absolute;
-    
+    padding-left: 100px;
+    padding-right: 100px;
+    text-align: center;
+    padding-top: 60px;
 }
 #welcome span{
     font-size: 40px;
+    font-family: monospace;
+}
+#welcome p{
+    font-size: 19px;
+    padding: 30px;
 }
