--- a/site/info/style.css
+++ b/site/info/style.css
@@ -13,6 +13,7 @@
 #serversta{
     position: absolute;
     top: 270px;
-    left: 51px;
-    font-size: 22px;
+    left: 50%;
+    width: 400px;
+    margin-left: -200px;
 }
